--- a/src/css/index.css
+++ b/src/css/index.css
@@ -64,7 +64,7 @@ h6{color: rgba(90, 87, 87, 0.62);}
 header{
     position: absolute;
     width: 100%;
-    height: 69px;
+    height: 89px;
     z-index: 9999;
     border-bottom: 1px solid rgba(255, 255, 255, 0.18);
     background: rgba(215, 215, 255, 0.09);
@@ -93,15 +93,11 @@ nav a {
 }
 .icon_font {
     font-size: 24px;
-    /*color: #fff;*/
     width: 120px;
     margin-left: 12px;
 }
 a:-webkit-any-link {
     color: currentColor;
-}
-nav a:link{
-    /*color: #fff;*/
 }
 nav a:active,nav a:hover {
     color: red;
@@ -113,16 +109,51 @@ nav a:active,nav a:hover {
     height: 100%;
     width: 100%;
 }
-.slide1_content, .slide2_content, .slide3_content {
+.slide_content{
     position: absolute;
-    top:100px;
-    left: 30%;
+    left: 50%;
+    top: 90px;
     z-index: 9999;
+    width: 1200px;
+    margin-left: -600px;
+    height: 660px;
+}
+.slide_content .title{
+    line-height: 1;
+    color:#d81d15;
+    font-size: 50px;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+}
+.slide_content >p:nth-child(1){
+    margin-top: 130px;
+}
+.slide_content >p:nth-child(2){
+    margin-top: 15px;
+}
+.slide_content .desc1 {
+    font-size: 16px;
+    color:#fff;
+    display: block;
+}
+.slide_content >p:nth-child(3) {
+    margin-top: 20px;
+}
+.slide_content >p:nth-child(4) {
+    margin-top: 55px;
+}
+.slide_content >p:nth-child(5) {
+    margin-top: 30px;
+    color: #fff;
+}
+.slide_content >p:nth-child(5) >span {
+    color: #d81d15;
 }
 .swiper-slide {
     max-width: 100%;
     max-height: 100%;
-    height: auto;
+    height: 750px;
 }
 .swiper-button-prev,.swiper-button-next{
     border-radius: 60px;
@@ -158,23 +189,27 @@ nav a:active,nav a:hover {
     margin: 0 auto;
 }
 .service img{
-    width:50px;
+    /*width:50px;*/
 }
 .service >p,.ourCase >p{
     margin:0 auto;
     text-align: center;
     text-transform: uppercase;
     color:#ddd;
+    font-size: 14px;
 }
 .service h2,.ourCase h2{
-    margin:5px auto;
+    margin: 5px auto;
     text-align: center;
+    font-size: 30px;
+    font-weight: normal;
 }
 .service_content {
-    margin: 30px 0;
+    margin: 56px 0 47px 0;
+    height: 260px;
 }
 .service_content>div, .case_content>div{
-    width: 22.2%;
+    width: 25%;
     height: 100%;
     display: inline-block;
     margin: 0 0;
@@ -185,21 +220,31 @@ nav a:active,nav a:hover {
     box-shadow:0 0 10px #ddd;
 }
 .sub_service_content{
-    border:1px solid #fff;
-    padding:5px 8px;
-    background:transparent;
-    -webkit-box-shadow:  1px 1px 15px  #fff;
-    -moz-box-shadow:  1px 1px 15px  #fff;
-    box-shadow:  1px 1px 15px  #fff;
+    cursor: pointer;
+    position: relative;
 }
 .sub_service_content:hover{
-    cursor: pointer;
-    border:1px solid #d4cdcd;
-    padding:5px 8px;
-    background:rgba(241, 241, 241, 0.44);
-    -webkit-box-shadow:  1px 1px 15px  #ddd;
-    -moz-box-shadow:  1px 1px 15px  #ddd;
-    box-shadow:  1px 1px 15px  #ddd;
+    background:#f3f3f3;
+}
+.sub_service_content>div{
+    margin-top: 34px;
+}
+.sub_service_content .title {
+    color: #303030;
+    font-size: 18px;
+    position: absolute;
+    width: 100%;
+    top: 120px;
+}
+.sub_service_content .desc {
+    color: #999;
+    font-size: 14px;
+    line-height: 1.2;
+    width: 84%;
+    left: 6%;
+    top: 170px;
+    text-align: left;
+    position: absolute;
 }
 .button_box {
     margin: 50px auto 0;
@@ -284,21 +329,21 @@ nav a:active,nav a:hover {
     height: 400px;
 }
 .who_we {
-    margin:80px 0 0 0;
+/*    margin:80px 0 0 0;
     padding: 0;
     font-size: 24px;
-    font-weight: normal;
+    font-weight: normal;*/
 }
 .desc_1 {
-    margin:25px 0;
-    color:red;
-    font-size: 0.9em;
+    margin:40px 0;
+    color:#d81d15;
+    font-size: 14px;
     font-weight: 600;
     font-style:oblique
 }
 .desc_2 {
     font-size: 14px;
-    color: gray;
+    color: #7e7e7e;
     padding: 0;
     margin: 0 0 30px 0;
     line-height: 1.5;
@@ -337,9 +382,13 @@ nav a:active,nav a:hover {
     max-width: 100%;
     max-height: 100%;
     width: 100%;
+    cursor: pointer;
 }
 .ourCase {
     margin: 0 auto;
+}
+.home_page .ourCase {
+    padding:60px 0 80px 0;
 }
 .ourCase .button_box {
     margin: 20px auto 0;
@@ -353,7 +402,7 @@ nav a:active,nav a:hover {
     text-align: left;
     background: rgba(23, 20, 20, 0.65);
     color: white;
-    /*display: none;*/
+    display: none;
 }
 .case_content>div:hover .img_title{
     display:block;
@@ -425,6 +474,10 @@ footer {
 }
 .about_lws {
     text-align: left;
+    margin:80px 0 0 0;
+    padding: 0;
+    font-size: 24px;
+    font-weight: normal;
 }
 .about_lws_desc{
     margin-left: 0;
@@ -517,21 +570,34 @@ footer {
 .product_service{
     margin: 0 auto;
 }
-.service {
+.home_page .service {
     margin: 0 auto;
+    padding: 80px 0;
 }
-.service.product_service {
-   /*background:#f1f1f1; */
+.home_page .aboutUs {
+    padding: 80px 0;
 }
-.product_service .sub_service_content:hover{
-    border:1px solid #ddd;
-    padding:5px 8px;
-    background:#fff;
-    -webkit-box-shadow:  1px 1px 15px  #ddd;
-    -moz-box-shadow:  1px 1px 15px  #ddd;
-    box-shadow:  1px 1px 15px  #ddd;
+.home_page .aboutUs .img_box {
+    left: 0;
+    float: left;
+    margin-top: 0;
+}
+.home_page .about_us {
+    font-size: 14px;
+    text-transform: uppercase;
+    margin: 10px 0;
+    color: #c0c0c0;
+}
+.home_page .who_we {
+    margin:12px 0 0 0;
+    padding: 0;
+    font-size: 30px;
+    font-weight: normal;
 
 }
+.service.product_service {
+}
+
 .product_service .sub_service_content:hover h5{color:red;}
 /*产品与服务 end*/
 /*新闻动态  begin*/
