--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,7 @@ html,body,.container{
     position: relative;
     margin: 0;
     padding: 0;
+   font-family: "Microsoft YaHei" ! important; 
 }
 h1,h2,h3,h4,h5{padding:0px;margin:0px;}
 h6{color: rgba(90, 87, 87, 0.62);}
@@ -55,16 +56,11 @@ h6{color: rgba(90, 87, 87, 0.62);}
     -o-align-self: center;/* WP Opera 10 */
     align-self: center;
 }
-.swiper-button-prev:before{
-    background-image: url('../images/arrow_l.png');
-}
-.swiper-button-next:before{
-    background-image: url('../images/arrow_r.png');
-}
+.swiper-button-prev:hover, .swiper-button-next:hover, .swiper-pagination-bullet-active{background:red;}
 header{
     position: fixed;
     width: 100%;
-    height: 89px;
+    height: 69px;
     z-index: 9999;
     border-bottom: 1px solid rgba(255, 255, 255, 0.18);
     background: rgba(215, 215, 255, 0.09);
@@ -227,7 +223,10 @@ nav a:active,nav a:hover {
 }
 .sub_service_content:hover{
     background:#f3f3f3;
-    
+    -webkit-transform:scale(1.06);
+    -moz-transform:scale(1.06);
+    -o-transform:scale(1.06);
+    transform:scale(1.06);
 }
 .sub_service_content .desc:hover{
 }
@@ -288,6 +287,7 @@ nav a:active,nav a:hover {
     padding:0;
 }
 
+
 .aboutUs_container .about_lws{color:#000;font-size: 20px;}
 
 .img_box, .about_box {
@@ -301,6 +301,7 @@ nav a:active,nav a:hover {
     margin-top: 10px;
     float: right;
 }
+.img_box img{max-width: 400px;}
 .map_box{
     height: 402px;
     width: 602px;
@@ -350,7 +351,7 @@ nav a:active,nav a:hover {
     color:#d81d15;
     font-size: 14px;
     font-weight: 600;
-    font-style:oblique
+   
 }
 .desc_2 {
     font-size: 14px;
@@ -364,7 +365,7 @@ nav a:active,nav a:hover {
 }
 .we_font {
     padding-bottom: 10px;
-    border-bottom: 2px solid #000;
+    border-bottom: 1px solid #000;
 }
 .aboutUs .more_button {
     background:#bd0a0a;
@@ -397,9 +398,9 @@ nav a:active,nav a:hover {
     cursor: pointer;
 }
 .case_content>div:hover{
-    -webkit-transform:scale(1.2,1.2);
-    -moz-transform:scale(1.2,1.2);
-    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
+    transform:scale(1.1,1.1);
 }
 .ourCase {
     margin: 0 auto;
@@ -461,7 +462,14 @@ footer {
     -webkit-box-flex:1.0; /* Safari and Chrome */
     box-flex:1.0;
 }
-.box1 img{width:45px;margin-bottom:10px;}
+.box1 img{    width: 100px;
+    margin-bottom: 26px;
+}
+.box1 .box_one_div{    
+    display: inline-block;
+    float: left;
+    margin-left: 10%
+}
 .box1 span{display:block;font-size:12px;}
 .beizhu {
     width:100%;
@@ -475,7 +483,7 @@ footer {
     height: 52px;
 }
 .beizhu>div p{position: absolute;left: 6%;top: 7px;font-size: 12px;}
-.beizhu>div img{position: absolute;right: 7%;top: 14px;width: 25px;height: 25px;}
+.beizhu>div img{position: absolute;right: 3%;top: 14px;width: 25px;height: 25px;}
 
 .menu_about {
     background: url('./../images/about_banner_bg.png') no-repeat;
@@ -601,7 +609,7 @@ footer {
 .product_classify{    
     padding: 0;
     margin: 0 auto;
-    justify-content: left;
+    justify-content: flex-start;
 }
 .news_infomation .product_classify{
 }
@@ -609,8 +617,7 @@ footer {
     border:1px solid rgba(224, 218, 218, 0.62);
     margin-left:4%;
     border-radius:20px;
-    width:100px;
-    padding:5px 8px;
+    padding:5px 40px;
     height: 30px;
     line-height: 30px;
 }
@@ -647,20 +654,18 @@ footer {
     padding: 0;
     font-size: 30px;
     font-weight: normal;
-
 }
-.service.product_service {
+.product_service >.product_classify{
+    justify-content: center!important;
 }
-
 .product_service .sub_service_content:hover h5{color:red;}
 /*产品与服务 end*/
 /*新闻动态  begin*/
 .news_banner_bg{
-    background: url('./../images/news_banner_bg.png')  no-repeat;
+    background: url('./../images/news_banner_bg.png');
     height: 300px;
     width: 100%;
-    background-position: 0 70px;
-    color:#000;
+    color: #fff;
 }
 .news_infomation {
     margin-bottom: 126px;
@@ -673,7 +678,6 @@ footer {
     height: 180px;
     cursor: pointer;
 }
-
 .news_infomation .product_type {
     margin-left: 0;
     margin-right: 4%;
@@ -701,22 +705,23 @@ footer {
 }
 .news_desc {
     font-size: 13px;
-    color:#999999;
+    color: #999;
     line-height: 1.8;
+    margin: 20px 0;
+    width: 750px;
 }
-
 .newList_ul{padding:0px;margin:0px;}
 .newList_ul li{list-style-type: none;}
 .news_info_contain{width:100%;}
 .news_image_div{width:20%;float:left;}
 .news_content{width:80%;float:right;}
 .news_content .new_detail_info{width:80%;float:left;}
-
 .month_day{
     position: absolute;
     top: 55px;
     right: 40px;
     width: 52px;
+    margin-top: 4px;
     font-size: 18px;
     color: #999999;
 }
@@ -736,10 +741,8 @@ footer {
     color: #999999;
     cursor: pointer;
 }
-
 /*新闻动态  end*/
 /* 新闻详情  begin*/
-
 .pre_next_sign, .news_detail_content_class{width:100%;max-width: 1200px;margin: 10px auto;}
 .news_detail_head{
     background: #f7f7f7;
@@ -747,15 +750,12 @@ footer {
     text-align: center;
     padding:20px 0px;
 }
-
 .news_detail_footer{
     padding:8px 0px;
     width:100%;
     border-top: 1px solid #f1f1f1;
     font-size:12px;
 }
-
-
 .pre_next_sign img{width:30px;height:30px;}
 .pre_next_sign .previous{width:50%;float:left;text-align:left;position: relative;}
 .pre_next_sign span{
@@ -765,7 +765,6 @@ footer {
 .pre_next_sign .previous span{
     left: 45px;
 }
-
 .pre_next_sign .next{
     text-align: right;
     position: relative;
@@ -790,7 +789,7 @@ footer {
     margin-top: 42px;
 }
 .erweimaimg_box img{
-    max-width: 100%;
+    max-width: 140px;
 }
 .erwima_desc{
     margin: 8px 0px;
@@ -921,4 +920,17 @@ a{
     border-radius: 10px;
     cursor: pointer;
     color: #696363;
+}
+.home_nav_class .nav_child{position:relative;padding:0;margin:0;}
+.home_nav_class{position:fixed;right: 10%;top:50%;/* max-width:100px; */}
+.home_nav_class img{dispaly:absolute;top:0;width:45px;}
+.home_nav_class img:hover{
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
+    transform:scale(1.1,1.1);
+}
+.home_nav_class .desc{position:absolute;top: 11px;left: 49px;width: 116px;font-size: 12px;color: #80bed6;}
+.home_nav_class .bootNav{
+    width:3px;height:10px;background:#80bed6;
+    margin:0 auto;margin-top:-6px;
 }
